--- a/tableau_embed.html
+++ b/tableau_embed.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <!-- Paste your Tableau embed URL here -->
-    <iframe src="https://public.tableau.com/views/SportsIndustryBenchmarks/Story1?:language=en-US&:display_count=n&:origin=viz_share_link" width="800" height="600"></iframe>
+    <iframe src="https://public.tableau.com/views/SportsIndustryBenchmarks/Story1" width="800" height="600"></iframe>
 </body>
 </html>
